--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dart-league",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "draft-js": "^0.11.7",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
