--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.2",
+    "puppeteer": "^19.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
